# elwave-3d-cg

./: .gitignore  CMakeLists.txt  GLL_quadrature.cpp  config.hpp.in  config_elwave.hpp.in  elastic_wave3D.cpp  elastic_wave3D.hpp  parameters.cpp  parameters.hpp  receivers.cpp  receivers.hpp  run_FEM_ALID.cpp  run_SEM_SRM.cpp  utilities.hpp
scripts/: make_layer.py  matrix_spy.m  max_nondiag.m
src/: GLL_quadrature.cpp  GLL_quadrature.hpp  elastic_wave3D.cpp  elastic_wave3D.hpp  main.cpp  parameters.cpp  parameters.hpp  receivers.cpp  receivers.hpp  run_FEM_ALID.cpp  run_SEM_SRM.cpp  snapshots.cpp  snapshots.hpp  source.cpp  source.hpp  utilities.cpp  utilities.hpp
